syntax = "proto3";
option csharp_namespace= "GstoreClient";

service GstoreService {
	rpc Write (WriteRequest) returns (WriteReply);
	rpc Read (ReadRequest) returns (ReadReply);
	rpc ListServer (ListServerRequest) returns (ListServerReply);

	rpc Ping (PingRequest) returns (PingReply);
}

message ListServerRequest {
	
}

message ListServerReply {
	repeated StoredObject objects = 1;
}

message StoredObject {
    bool master = 1;
    string server_id = 2;
    string partition_id = 3;
    string object_id = 4;
    string value = 5;
}

message WriteRequest {
	string partition_id = 1;
	string object_id = 2;
	string value = 3;
}

message WriteReply {
	bool ok = 1;
}

message ReadRequest {
	string partition_id = 1;
	string object_id = 2;
}

message ReadReply {
	string value = 1;
}

message PingRequest {
}

message PingReply {
	bool ok = 1;
}